# super-mario-bros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  maplayout
assets/: map-generated  map1
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
engine/: CMakeLists.txt
engine/include/: AABB.h  Application.h  Component.h  Components.h  Constants.h  Engine.h  Log.h  ResourceManager.h  Scene.h  Shader.h  SoundManger.h  SpriteRenderer.h  Texture2D.h  TextureManager.h  ecs.h
engine/include/systems/: RenderSystem.h  SoundSystem.h
engine/shaders/: sprite.fsh  sprite.vsh
engine/src/: Application.cpp  Log.cpp  RenderSystem.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  SoundManager.cpp  SoundSystem.cpp  SpriteRenderer.cpp  Texture2D.cpp  TextureManager.cpp  main.cpp
include/: AABB.h  Components.h  Constants.h  EditorSystem.h  Game.h  MapSystem.h  RenderSystem.h  SoundManger.h  TextureManager.h  TileType.h
include/ecs/: ecs.h
include/scenes/: EditorScene.h  GameScene.h  IntroScene.h  Scene.h
include/systems/: AnimationSystem.h  CallbackSystem.h  EditorSystem.h  EnemySystem.h  FlagSystem.h  MapSystem.h  PhysicsSystem.h  PlayerSystem.h  RenderSystem.h  ScoreSystem.h  SoundSystem.h  TileSystem.h
sandbox/: CMakeLists.txt
sandbox/include/: Components.h  Constants.h  TileType.h
sandbox/include/scenes/: EditorScene.h  GameScene.h  IntroScene.h
sandbox/include/systems/: AnimationSystem.h  CallbackSystem.h  EditorSystem.h  EnemySystem.h  FlagSystem.h  MapSystem.h  PhysicsSystem.h  PlayerSystem.h  ScoreSystem.h  TileSystem.h
sandbox/src/: AABB.cpp  SandBoxApplication.cpp
sandbox/src/scenes/: EditorScene.cpp  GameScene.cpp  IntroScene.cpp
sandbox/src/systems/: AnimationSystem.cpp  CallbackSystem.cpp  EditorSystem.cpp  EnemySystem.cpp  FlagSystem.cpp  MapSystem.cpp  PhysicsSystem.cpp  PlayerSystem.cpp  ScoreSystem.cpp  TileSystem.cpp
src/: AABB.cpp  EditorSystem.cpp  Game.cpp  Main.cpp  MapSystem.cpp  RenderSystem.cpp  SoundManager.cpp  TextureManager.cpp
src/ecs/: copylearn.h  ecs.cpp
src/scenes/: EditorScene.cpp  GameScene.cpp  IntroScene.cpp
src/systems/: AnimationSystem.cpp  CallbackSystem.cpp  EditorSystem.cpp  EnemySystem.cpp  FlagSystem.cpp  MapSystem.cpp  PhysicsSystem.cpp  PlayerSystem.cpp  RenderSystem.cpp  ScoreSystem.cpp  SoundSystem.cpp  TileSystem.cpp
